environment variables managed properly

--- a/meson.build
+++ b/meson.build
@@ -42,7 +42,6 @@ lib_src = [
         'src/site/site.cpp',
         'src/uenv/env.cpp',
         'src/uenv/envvars.cpp',
-        'src/uenv/lex.cpp',
         'src/uenv/log.cpp',
         'src/uenv/meta.cpp',
         'src/uenv/oras.cpp',
@@ -54,10 +53,12 @@ lib_src = [
         'src/util/color.cpp',
         'src/util/curl.cpp',
         'src/util/fs.cpp',
+        'src/util/lex.cpp',
         'src/util/shell.cpp',
         'src/util/signal.cpp',
         'src/util/strings.cpp',
         'src/util/subprocess.cpp',
+        'src/util/environment.cpp',
 ]
 lib_inc = include_directories('src')
 
