--- a/completion/meson.build
+++ b/completion/meson.build
@@ -1,8 +1,10 @@
+fs = import('fs')
+
 bash_completion = custom_target(
     'bash-completion',
     input: cli,
     output: cli.name(),
-    command: ['env', 'PATH='+meson.current_build_dir()+'/..:$PATH', cli.name(), 'completion', 'bash'],
+    command: ['env', 'PATH='+fs.parent(cli.full_path())+':$PATH', cli.name(), 'completion', 'bash'],
     install: true,
     capture: true,
     install_dir: get_option('datadir')+'/bash-completion/completions',
