--- a/meson.build
+++ b/meson.build
@@ -41,18 +41,19 @@ barkeep_dep = declare_dependency(
 lib_src = [
         'src/site/site.cpp',
         'src/uenv/env.cpp',
-        'src/uenv/envvars.cpp',
-        'src/uenv/lex.cpp',
         'src/uenv/log.cpp',
         'src/uenv/meta.cpp',
         'src/uenv/oras.cpp',
         'src/uenv/parse.cpp',
         'src/uenv/print.cpp',
         'src/uenv/repository.cpp',
+        'src/uenv/settings.cpp',
         'src/uenv/uenv.cpp',
         'src/util/color.cpp',
         'src/util/curl.cpp',
+        'src/util/envvars.cpp',
         'src/util/fs.cpp',
+        'src/util/lex.cpp',
         'src/util/shell.cpp',
         'src/util/signal.cpp',
         'src/util/strings.cpp',
