Revert "disable debug in curl"
This reverts commit 148ee4b4e2c6f04ab3dac6ecceeb84fafc6baf2a.

--- a/meson.build
+++ b/meson.build
@@ -28,7 +28,7 @@ fmt_dep   = subproject('fmt', default_options: ['werror=false', 'warning_level=0
 json_dep = subproject('nlohmann_json', default_options: ['werror=false', 'warning_level=0']).get_variable('nlohmann_json_dep')
 spdlog_dep   = subproject('spdlog', default_options: ['werror=false', 'warning_level=0','std_format=disabled','external_fmt=enabled']).get_variable('spdlog_dep')
 sqlite3_dep = subproject('sqlite3', default_options: ['werror=false', 'warning_level=0']).get_variable('sqlite3_dep')
-subproject('curl', default_options: ['werror=false', 'warning_level=0', 'tests=disabled', 'unittests=disabled', 'tool=disabled', 'debug=false'])
+subproject('curl', default_options: ['werror=false', 'warning_level=0', 'tests=disabled', 'unittests=disabled', 'tool=disabled'])
 
 curl_dep = dependency('libcurl', required: true)
 barkeep_dep = declare_dependency(
