add 'uenv image push' command (#77)
Push an image to a remote registry:
```
uenv image push $SCRATCH/images/store.squashfs service::icon/25.2:v3@daint%gh200
```

* `--force` flag to force overwriting an existing image in the registry
* `--username` and `--token` flags for providing credentials

--- a/meson.build
+++ b/meson.build
@@ -81,11 +81,13 @@ if uenv_cli
             'src/cli/inspect.cpp',
             'src/cli/ls.cpp',
             'src/cli/pull.cpp',
+            'src/cli/push.cpp',
             'src/cli/repo.cpp',
             'src/cli/run.cpp',
             'src/cli/start.cpp',
             'src/cli/status.cpp',
             'src/cli/uenv.cpp',
+            'src/cli/util.cpp',
             'src/cli/build.cpp',
             'src/cli/completion.cpp',
             'src/util/completion.cpp',
