claudes first pass at generic registry

--- a/meson.build
+++ b/meson.build
@@ -46,6 +46,7 @@ lib_src = [
         'src/uenv/oras.cpp',
         'src/uenv/parse.cpp',
         'src/uenv/print.cpp',
+        'src/uenv/registry.cpp',
         'src/uenv/repository.cpp',
         'src/uenv/settings.cpp',
         'src/uenv/uenv.cpp',
