--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -23,16 +23,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Update apt repositories for ccache
-        run: sudo apt update
+        run: apt update
       - name: Install dependencies
-        run: sudo apt-get install util-linux libmount-dev libslurm-dev
+        run: apt-get install util-linux libmount-dev libslurm-dev
       #  run: sudo apt-get install util-linux libmount-dev slurm-wlm libslurm-dev slurmd slurmctld slurm-client
       - name: Set up ccache
         uses: hendrikmuhs/ccache-action@v1.2
         with:
           key: ccache-linux-${{ matrix.buildtype }}-${{ matrix.sanitizer }}
       - name: Install compiler and build tools
-        run: sudo apt install --no-install-recommends --yes g++-12 ninja-build libsquashfuse-dev libfuse3-dev
+        run: apt install --no-install-recommends --yes g++-12 ninja-build libsquashfuse-dev libfuse3-dev
       - name: install meson
         run: |
           wget https://github.com/mesonbuild/meson/releases/download/1.6.1/meson-1.6.1.tar.gz && \
@@ -56,5 +56,5 @@ jobs:
         run: ./meson/meson test -Cbuild --verbose unit
       - name: test cli
         run: |
-          sudo mkdir /user-tools /user-environment
+          mkdir /user-tools /user-environment
           UENV_BATS_SKIP_START=on ./meson/meson test -Cbuild --verbose cli
