--- a/test/integration/setup_suite.bash.in
+++ b/test/integration/setup_suite.bash.in
@@ -11,6 +11,15 @@ function setup_suite() {
     export SQFS_LIB=$DATA/sqfs
     export SRC_PATH=@source_path@
     export BUILD_PATH=@build_path@
+
+    # BIN_PATH is the path that contains binaries (uenv, squashfs-mount, etc, to test)
+    # It can be overriden at runtime 
+    export BIN_PATH="${STAGING_PATH/bin-$BUILD_PATH}"
+    if [ -n "$STAGING_PATH" ]; then
+        export UENV_BIN_PATH="$STAGING_PATH/bin"
+    else
+        export UENV_BIN_PATH="$BUILD_PATH"
+    fi
 }
 
 function teardown_suite() {
