--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Build
         run: ./meson/meson compile -Cbuild
       - name: Stage
-        run: sudo ./meson/meson install --destdir=$PWD/staging --no-rebuild --skip-subprojects
+        run: sudo ./meson/meson install -Cbuild --destdir=$PWD/staging --no-rebuild --skip-subprojects
       - name: test unit
         run: ./meson/meson test -Cbuild --verbose unit
       - name: test cli
