--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -55,4 +55,4 @@ jobs:
       - name: test cli
         run: |
           sudo mkdir /user-tools /user-environment
-          UENV_BATS_SKIP_START=on STAGING_DIR=$PWD/staging/usr/local ./meson/meson test -Cbuild --verbose cli
+          UENV_BATS_SKIP_START=on STAGING_PATH=$PWD/staging/usr/local ./meson/meson test -Cbuild --verbose cli
