parsing and working with semantic versioning

--- a/meson.build
+++ b/meson.build
@@ -58,6 +58,7 @@ lib_src = [
         'src/util/envvars.cpp',
         'src/util/fs.cpp',
         'src/util/lex.cpp',
+        'src/util/semver.cpp',
         'src/util/shell.cpp',
         'src/util/signal.cpp',
         'src/util/strings.cpp',
