detect and gracefully fall back to older squashfs-mount versions

--- a/test/meson.build
+++ b/test/meson.build
@@ -54,6 +54,7 @@ unit_src = [
         'unit/main.cpp',
         'unit/mount.cpp',
         'unit/parse.cpp',
+        'unit/shell.cpp',
         'unit/signal.cpp',
         'unit/strings.cpp',
         'unit/repository.cpp',
