add more squashfs-mount tests; small fixes

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -56,3 +56,7 @@ jobs:
         run: |
           sudo mkdir /user-tools /user-environment
           UENV_BATS_SKIP_START=on STAGING_PATH=$PWD/staging/usr/local ./meson/meson test -Cbuild --verbose cli
+      - name: test squashfs-mount
+        run: |
+          sudo mkdir /user-tools /user-environment
+          UENV_BATS_SKIP_START=on STAGING_PATH=$PWD/staging/usr/local ./meson/meson test -Cbuild --verbose squashfs-mount
