move squashfs-mount into the main uenv repo (#97)

--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -36,27 +36,27 @@ jobs:
           tar -xzf meson-1.6.1.tar.gz && \
           mv meson-1.6.1 meson && \
           mv meson/meson.py meson/meson
-      - name: install squashfs-mount
-        run: |
-          wget https://github.com/eth-cscs/squashfs-mount/archive/refs/tags/v1.1.0.tar.gz
-          tar -xzf v1.1.0.tar.gz
-          ./meson/meson setup build-sqfs squashfs-mount-1.1.0
-          ./meson/meson compile -C build-sqfs
-          sudo ./meson/meson install -C build-sqfs
       - name: Configure
         run: |
             CC="ccache gcc-12" CXX="ccache g++-12" ./meson/meson setup \
               --buildtype ${{ matrix.buildtype }} \
               -Db_sanitize=${{ matrix.sanitizer }} \
               -Dtests=enabled \
+              -Dsquashfs_mount=true \
               --warnlevel 3 \
               --werror \
               build .
       - name: Build
         run: ./meson/meson compile -Cbuild
-      - name: test unit
+      - name: Stage
+        run: sudo ./meson/meson install -Cbuild --destdir=$PWD/staging --no-rebuild --skip-subprojects
+      - name: create mount points for tests
+        run: sudo mkdir /user-tools /user-environment
+      - name: unit tests
         run: ./meson/meson test -Cbuild --verbose unit
-      - name: test cli
+      - name: cli integration tests
         run: |
-          sudo mkdir /user-tools /user-environment
-          UENV_BATS_SKIP_START=on ./meson/meson test -Cbuild --verbose cli
+          UENV_BATS_SKIP_START=on STAGING_PATH=$PWD/staging/usr/local ./meson/meson test -Cbuild --verbose cli
+      - name: squashfs-mount integration tests
+        run: |
+          UENV_BATS_SKIP_START=on STAGING_PATH=$PWD/staging/usr/local ./meson/meson test -Cbuild --verbose squashfs-mount
