--- a/src/slurm/meson.build
+++ b/src/slurm/meson.build
@@ -5,15 +5,11 @@ configure_file(input : 'config.hpp.in',
                output : 'config.hpp',
                configuration : conf_data)
 
-libmount_dep = dependency('mount')
-
-module_src = ['plugin.cpp', 'mount.cpp']
-
-module_dep = [libmount_dep, sqlite3_dep, uenv_dep]
+module_src = ['plugin.cpp', 'mount_slurm.cpp']
 
 shared_module('slurm-uenv-mount',
               sources: module_src,
-              dependencies: module_dep,
+              dependencies: uenv_dep,
               cpp_args: ['-Wall', '-Wpedantic', '-Wextra'],
               install: true)
 
