send stats to elastic

--- a/src/slurm/meson.build
+++ b/src/slurm/meson.build
@@ -6,12 +6,10 @@ configure_file(input : 'config.hpp.in',
                configuration : conf_data)
 
 subdir('slurm')
-
-module_src = ['plugin.cpp', 'mount_slurm.cpp']
+module_src = ['plugin.cpp', 'mount_slurm.cpp', 'elastic.cpp']
 
 shared_module('slurm-uenv-mount',
               sources: module_src,
               dependencies: [uenv_dep, slurm_dep],
               cpp_args: ['-Wall', '-Wpedantic', '-Wextra'],
               install: true)
-
